; ModuleID = '/home/carl/AnghaBench/linux/lib/dim/extr_net_dim.c_net_dim_get_rx_moderation.c'
source_filename = "/home/carl/AnghaBench/linux/lib/dim/extr_net_dim.c_net_dim_get_rx_moderation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dim_cq_moder = type { i64 }

@rx_profile = common dso_local global %struct.dim_cq_moder** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @net_dim_get_rx_moderation(i64 %0, i32 %1) #0 {
  %3 = alloca %struct.dim_cq_moder, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.dim_cq_moder**, %struct.dim_cq_moder*** @rx_profile, align 8
  %7 = load i64, i64* %4, align 8
  %8 = getelementptr inbounds %struct.dim_cq_moder*, %struct.dim_cq_moder** %6, i64 %7
  %9 = load %struct.dim_cq_moder*, %struct.dim_cq_moder** %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds %struct.dim_cq_moder, %struct.dim_cq_moder* %9, i64 %11
  %13 = bitcast %struct.dim_cq_moder* %3 to i8*
  %14 = bitcast %struct.dim_cq_moder* %12 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %13, i8* align 8 %14, i64 8, i1 false)
  %15 = load i64, i64* %4, align 8
  %16 = getelementptr inbounds %struct.dim_cq_moder, %struct.dim_cq_moder* %3, i32 0, i32 0
  store i64 %15, i64* %16, align 8
  %17 = getelementptr inbounds %struct.dim_cq_moder, %struct.dim_cq_moder* %3, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  ret i64 %18
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
